# aptitude-robot

./: .gitignore  CONTRIBUTING.mdown  Makefile.am  README.md  README.mdown  TODO.md  TODO.mdown  aptitude-robot  aptitude-robot-session  aptitude-robot-session.pod  build-all  configure.ac  mail-log-on-error  random-delay  reporting-helpers  xymon-report
debian/: aptitude-robot.cron.daily  aptitude-robot.default  aptitude-robot.lintian-overrides  aptitude-robot.logrotate  aptitude-robot.service  aptitude-robot.upstart  changelog  control  copyright  cron.daily  default  docs  gbp.conf  init.d  links  lintian-overrides  logrotate  maintscript  rules  service  upstart  watch
debian/source/: lintian-overrides  options
debian/tests/: control
debian/upstream/: metadata
etc/aptitude-robot/: options
etc/aptitude-robot/options.d/: 10-remove-level-maximum
etc/aptitude-robot/pkglist.d/: README.txt
etc/aptitude-robot/triggers.post/: 90-cleanup.example  README.txt
etc/aptitude-robot/triggers.pre/: README.txt
t/: 001_help-option.t  001_help-option.t.in  010_simple-calls.t  010_simple-calls.t.in  011_simple-calls-from-cli.t  011_simple-calls-from-cli.t.in  012_simulate-from-cli.t  013_quiet-option-cli.t  014_pass-extra-options-cli.t  020_runparts.t  020_runparts.t.in  021_file-slurp.t  021_file-slurp.t.in  030_parser.t  030_parser.t.in  031_extra-space.t  031_extra-space.t.in  032_comments.t  032_comments.t.in  040_extra-options.t  040_extra-options.t.in  041_options-syntax.t  041_options-syntax.t.in  050_force-install.t  050_force-install.t.in  051_force-install.t  051_force-install.t.in  052_force-install.t  052_force-install.t.in  059_force-install-cli.t  059_force-install-cli.t.in  060_triggers.t  060_triggers.t.in  061_missing-package-name.t  070_reporting_helper.t
t/testdata/comments/pkglist.d/: 10_foo
t/testdata/extra-options/: options
t/testdata/extra-options/options.d/: 10-download  20-without-recommends
t/testdata/extra-space/pkglist.d/: 10_foo
t/testdata/force-install-1/pkglist.d/: 10_foo
t/testdata/force-install-2/pkglist.d/: 10_foo
t/testdata/missing-package-name/pkglist.d/: 10_foo
t/testdata/multiple-files/pkglist.d/: 20_bar
t/testdata/option-with-parameter/: options
t/testdata/single-file/pkglist.d/: 10_foo
