AC_PREREQ([2.67])dnl require version in Debian squeeze (or higher)
AC_INIT(
    [Aptitude Robot],
    [1.3.4.1],
    [elmar@heebs.ch],
    [aptitude-robot],
    [https://github.com/elmar/aptitude-robot.git]
)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
