AC_PREREQ([2.67])dnl require version in Debian squeeze (or higher)
AC_INIT(
    [Aptitude Robot],
    [1.5.5],
    [https://github.com/elmar/aptitude-robot/issues],
    [aptitude-robot],
    [https://github.com/elmar/aptitude-robot]
)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
